<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:id="@+id/main_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/toolback_bar"
             android:visibility="visible"/>
    <ScrollView
            android:layout_below="@+id/toolback"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:padding="16dp"
                    android:text="@string/verification_code"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code_subtext"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>
            <TextView

                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_holder_value"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>

            <com.dev.otpview.OtpView
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"

                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:inputType="number"
                    android:itemBackground="@drawable/bg_otp_item"
                    android:textColor="@android:color/white"
                    app:hideLineWhenFilled="true"
                    app:itemCount="5"
                    app:itemSpacing="6dp"
                    app:lineColor="@color/otp_item_state"
                    app:state_filled="true"
                    app:viewType="line"/>
            <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"


                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_resend"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:padding="0dp"
                        android:paddingBottom="0dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"

                        android:textColor="@color/white"
                        app:backgroundTint="@android:color/holo_red_dark"
                        android:background="@android:color/holo_red_dark"

                        app:cornerRadius="5dp"
                        app:rippleColor="@color/colorPrimary"
                        android:textStyle="bold"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                        android:text="@string/resend"/>
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_validate_otp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:padding="0dp"
                        android:paddingBottom="0dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"


                        android:textColor="@color/white"
                        app:cornerRadius="5dp"
                        app:rippleColor="@color/colorPrimary"
                        android:textStyle="bold"
                        app:backgroundTint="@color/colorPrimary"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                        android:text="@string/validate"/>

            </LinearLayout>


            <include layout="@layout/loading_avi"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>