<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/toolback_bar"
             android:visibility="visible"/>
    <ScrollView
            android:layout_below="@+id/toolback"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">

            <TextView

                    android:paddingStart="16dp"

                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"

                    android:layout_marginStart="3dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:id="@+id/txt_names_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_your_sex_and_date_of_birth"
                    android:textSize="16.8sp"/>
            <TextView

                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="Why do we need your sex and age ?"
                    android:layout_marginStart="3dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_dob"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:padding="4dp"


                        app:boxCornerRadiusTopStart="1dp"
                        app:boxCornerRadiusTopEnd="1dp"
                        app:boxCornerRadiusBottomStart="1dp"
                        app:boxCornerRadiusBottomEnd="1dp"

                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        app:boxStrokeWidth="1dp"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/colorPrimary"

                >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:focusableInTouchMode="false"
                            android:focusable="false"
                            app:helperText="11/11/1999"
                            app:helperTextEnabled="true"
                            android:hint="@string/date_of_birth"
                            android:inputType="date"

                            android:maxLength="10"

                    />

                </com.google.android.material.textfield.TextInputLayout>


                <RadioGroup android:layout_width="match_parent"
                            android:padding="12dp"
                            android:id="@+id/radio_grp"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">
                    <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/male"
                            android:padding="12dp"
                            android:id="@+id/radio_male"

                            android:layout_height="wrap_content"/>
                    <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="0dp"
                            android:padding="12dp"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/female"
                            android:id="@+id/radio_female"

                            android:layout_height="wrap_content"/>

                </RadioGroup>



                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_next"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:paddingBottom="0dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"

                        android:textColor="@color/white"
                        app:backgroundTint="@color/colorPrimary"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                        android:text="@string/next"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <include layout="@layout/loading_avi"/>

</RelativeLayout>