<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/toolback_bar"
             android:visibility="visible"/>
    <ScrollView
            android:layout_below="@+id/toolback"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

            <TextView

                    android:padding="6dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/txt_password_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="16.8sp"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    android:padding="4dp">
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:padding="4dp"


                        app:boxCornerRadiusTopStart="1dp"
                        app:boxCornerRadiusTopEnd="1dp"
                        app:boxCornerRadiusBottomStart="1dp"
                        app:boxCornerRadiusBottomEnd="1dp"

                        app:boxStrokeWidth="1dp"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:passwordToggleEnabled="true"

                >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            app:helperText="@string/password"
                            app:helperTextEnabled="true"
                            android:hint="@string/password"
                            android:inputType="textPassword"

                    />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_next_password_view"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingBottom="0dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"


                    android:textColor="@color/white"
                    app:cornerRadius="5dp"
                    app:rippleColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimary"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:text="@string/next"/>


            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                <TextView
                        android:padding="6dp"
                        android:textStyle="bold"
                        android:id="@+id/txt_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_you_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14.5sp"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorAccent"/>
            </LinearLayout>
            <include layout="@layout/loading_avi"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>